syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "common/source.proto";

option go_package = "api/grpc/v1/org_plan;org_plan_grpc_service";

message CreateOrganizationPlanGrpcRequest {
  string tenant = 1;
  string loggedInUserId = 2;
  string name = 3;
  google.protobuf.Timestamp createdAt = 4;
  SourceFields sourceFields = 5;
  string masterPlanId = 6;
  string orgId = 7;
}

// Create Milestone takes just a list of string items, as they are all `not started` by default
message CreateOrganizationPlanMilestoneGrpcRequest {
  string tenant = 1;
  string organizationPlanId = 2;
  string loggedInUserId = 3;
  string name = 4;
  google.protobuf.Timestamp createdAt = 5;
  SourceFields sourceFields = 6;
  bool optional = 7;
  int64 durationHours = 8;
  repeated string items = 9;
  int64 order = 10;
}

enum OrganizationPlanFieldMask {
  ORGANIZATION_PLAN_PROPERTY_NONE = 0; // No property, ignored by the server
  ORGANIZATION_PLAN_PROPERTY_ALL = 1; // All properties, if present in the list all other properties are ignored
  ORGANIZATION_PLAN_PROPERTY_NAME = 2;
  ORGANIZATION_PLAN_PROPERTY_RETIRED = 3;
}

message UpdateOrganizationPlanGrpcRequest {
  string organizationPlanId = 1;
  string tenant = 2;
  string loggedInUserId = 3;
  string name = 4;
  bool retired = 5;
  repeated OrganizationPlanFieldMask fieldsMask = 6;
  google.protobuf.Timestamp updatedAt = 7;
  string appSource = 8;
  string masterPlanId = 9;
  string orgId = 10;
}

enum OrganizationPlanMilestoneFieldMask {
  ORGANIZATION_PLAN_MILESTONE_PROPERTY_NONE = 0; // No property, ignored by the server
  ORGANIZATION_PLAN_MILESTONE_PROPERTY_ALL = 1; // All properties, if present in the list all other properties are ignored
  ORGANIZATION_PLAN_MILESTONE_PROPERTY_NAME = 2;
  ORGANIZATION_PLAN_MILESTONE_PROPERTY_RETIRED = 3;
  ORGANIZATION_PLAN_MILESTONE_PROPERTY_OPTIONAL = 4;
  ORGANIZATION_PLAN_MILESTONE_PROPERTY_DURATION_HOURS = 5;
  ORGANIZATION_PLAN_MILESTONE_PROPERTY_ITEMS = 6;
  ORGANIZATION_PLAN_MILESTONE_PROPERTY_ORDER = 7;
}

message OrganizationPlanMilestoneItem {
    string status = 1;
    google.protobuf.Timestamp updatedAt = 2;
    string text = 3;
}

// Update milestone requires items to be a list of objects, which would contain the status, text and updatedAt
message UpdateOrganizationPlanMilestoneGrpcRequest {
  string organizationPlanId = 1;
  string organizationPlanMilestoneId = 2;
  string tenant = 3;
  string loggedInUserId = 4;
  string appSource = 5;
  google.protobuf.Timestamp updatedAt = 6;
  string name = 7;
  bool retired = 8;
  bool optional = 9;
  int64 order = 10;
  int64 durationHours = 11;
  repeated OrganizationPlanMilestoneItem items = 12;
  repeated OrganizationPlanMilestoneFieldMask fieldsMask = 13;
}

message ReorderOrganizationPlanMilestonesGrpcRequest {
  string organizationPlanId = 1;
  string tenant = 2;
  string loggedInUserId = 3;
  string appSource = 4;
  google.protobuf.Timestamp updatedAt = 5;
  repeated string organizationPlanMilestoneIds = 6;
}

message OrganizationPlanIdGrpcResponse {
  string id = 1;
}

message OrganizationPlanMilestoneIdGrpcResponse {
  string id = 1;
}

// Service definition
service OrganizationPlanGrpcService {
  rpc CreateOrganizationPlan(CreateOrganizationPlanGrpcRequest) returns (OrganizationPlanIdGrpcResponse);
  rpc UpdateOrganizationPlan(UpdateOrganizationPlanGrpcRequest) returns (OrganizationPlanIdGrpcResponse);
  rpc CreateOrganizationPlanMilestone(CreateOrganizationPlanMilestoneGrpcRequest) returns (OrganizationPlanMilestoneIdGrpcResponse);
  rpc UpdateOrganizationPlanMilestone(UpdateOrganizationPlanMilestoneGrpcRequest) returns (OrganizationPlanMilestoneIdGrpcResponse);
  rpc ReorderOrganizationPlanMilestones(ReorderOrganizationPlanMilestonesGrpcRequest) returns (OrganizationPlanIdGrpcResponse);
}